# HFT-LegacyMigrationFramework

./: .gitignore  ALL_NEW_ENHANCEMENT_CODE_WITH_CMake.MD  ARCHITECTURE.md  BUILD.docx  BUILD.txt  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPER_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PRODUCTION_FEATURES.md  README.md  add_path.txt  build_chewi.txt  test_catalog.txt  ~$BUILD.docx  ~$BUILD.txt
_codeql_build_dir/examples/: example_basic  example_codegen  example_orm
_codeql_build_dir/tests/: test_catalog  test_orm  test_postgresql
asio-sql-service/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md
asio-sql-service/client/: client_main.cpp  sql_client.hpp
asio-sql-service/common/: protocol.hpp
asio-sql-service/examples/: README.md  integration_example.cpp
asio-sql-service/server/: server_main.cpp  sql_server.hpp
dataPostgreSQL/: ecarb.bak
examples/: CMakeLists.txt  HFT-Demo.cpp  HFT-Demo.md  basic_usage.cpp  codegen_usage.cpp  orm_usage.cpp
include/hft/: hft.h
include/hft/catalog/: Catalog.h  ColumnMeta.hpp  DbDialect.hpp  TableMeta.hpp
include/hft/codegen/: CodeGenerator.h  EntityGenerator.hpp  UnitTestGenerator.hpp
include/hft/db/: ConnectionPool.hpp  DBException.hpp  IConnection.h  IDBReader.hpp  IDBTransaction.hpp  IDBValue.hpp  IResultSet.h  IStatement.h  ITransaction.h  Logger.hpp  PostgreSQLConnection.h  PreparedStatementCache.hpp  SybaseConnection.h
include/hft/entity/: BaseEntity.hpp  EntityTraits.hpp
include/hft/orm/: Repository.h
include/hft/pg/: PgConnection.hpp  PgRow.hpp
include/hft/reflection/: EntityTraits.h
include/hft/sybase/: SybConnection.hpp  SybPreparedStatement.hpp  SybReader.hpp  SybRow.hpp  SybTransaction.hpp  SybValue.hpp
src/catalog/: Catalog.cpp  Catalog.hpp
src/codegen/: EntityGenerator.cpp  RepositoryGenerator.cpp  RepositoryGenerator.hpp  UnitTestGenerator.cpp  main_codegen.cpp
src/db/: ConnectionPool.cpp  ConnectionPool.hpp  DBException.cpp  DBException.hpp  IDBConnection.hpp  IDBPreparedStatement.hpp  IDBRow.hpp  Logger.cpp  Logger.hpp  PostgreSQLConnection.cpp  QueryResultCache.hpp  SybaseConnection.cpp
src/entity/: Column.hpp
src/pg/: PgConnection.cpp  PgConnection.hpp  PgPreparedStatement.cpp  PgPreparedStatement.hpp  PgReader.cpp  PgReader.hpp  PgRow.cpp  PgRow.hpp  PgTransaction.cpp  PgTransaction.hpp  PgValue.cpp  PgValue.hpp
src/repository/: Repository.hpp
src/sybase/: SybConnection.cpp  SybConnection.hpp  SybPreparedStatement.cpp  SybPreparedStatement.hpp  SybReader.cpp  SybReader.hpp  SybRow.cpp  SybRow.hpp  SybTransaction.cpp  SybTransaction.hpp  SybValue.cpp  SybValue.hpp
tests/: CMakeLists.txt  MockConnection.cpp  MockConnection.hpp  MockPreparedStatement.cpp  MockPreparedStatement.hpp  MockReader.cpp  MockReader.hpp  MockRow.cpp  MockRow.hpp  MockTransaction.cpp  MockTransaction.hpp  Test_Repository_FXInstrument2.cpp  test_catalog.cpp  test_orm.cpp  test_postgresql.cpp  test_sybase.cpp
